Adjust em uso icon color

--- a/style.html
+++ b/style.html
@@ -1129,9 +1129,10 @@
             color: var(--em-uso-text);
         }
         .card.em-uso .card-icon .fa-user-clock,
+        .card.em-uso .card-icon .fas.fa-user-clock,
         .armario-card.em-uso .fa-user-clock,
-        .sidebar-menu .fa-user-clock {
-            color: #f2f6ff;
+        .armario-card.em-uso .fas.fa-user-clock {
+            color: var(--em-uso-text);
         }
         .card.em-uso .card-description {
             color: color-mix(in srgb, var(--em-uso-text) 75%, transparent);
