Add theme picker options

--- a/script.html
+++ b/script.html
@@ -52,6 +52,7 @@
                     unidade: 'todas',
                     busca: ''
                 },
+                temaAtual: 'claro',
                 autenticado: false,
                 usuarioAutenticado: null,
                 liberacao: criarEstadoLiberacaoInicial(),
@@ -82,7 +83,8 @@
             rascunhosOcupacao: 'locknac_rascunhos_ocupacao',
             rascunhoArmario: 'locknac_rascunho_armario',
             rascunhoTermo: 'locknac_rascunho_termo',
-            preferenciasCabecalho: 'locknac_preferencias_cabecalho'
+            preferenciasCabecalho: 'locknac_preferencias_cabecalho',
+            temaPreferido: 'locknac_tema_preferido'
         };
         const travaRolagem = {
             contador: 0,
@@ -134,6 +136,306 @@
                 url: 'https://api.dicebear.com/7.x/bottts/png?seed=Robotica&backgroundColor=dbebff'
             }
         ];
+        const THEMES = {
+            claro: {
+                label: 'Claro',
+                description: 'Visual equilibrado e luminoso',
+                swatch: ['#3b82f6', '#10b981', '#f9fafb', '#1f2937'],
+                prefersDark: false,
+                variables: {
+                    '--primary-color': '#3B82F6',
+                    '--secondary-color': '#10B981',
+                    '--success-color': '#22C55E',
+                    '--warning-color': '#F59E0B',
+                    '--danger-color': '#EF4444',
+                    '--primary-dark': '#1D4ED8',
+                    '--danger-dark': '#991B1B',
+                    '--dark-color': '#1F2937',
+                    '--light-color': '#F3F4F6',
+                    '--text-color': '#1F2937',
+                    '--muted-color': '#6B7280',
+                    '--surface-color': '#FFFFFF',
+                    '--bg-color': '#F9FAFB',
+                    '--border-color': '#E5E7EB',
+                    '--shadow-color': 'rgba(15, 23, 42, 0.08)',
+                    '--focus-ring': 'rgba(59, 130, 246, 0.25)',
+                    '--sidebar-gradient-start': '#0e2f63',
+                    '--sidebar-gradient-end': 'color-mix(in srgb, #010814 78%, #133f82)',
+                    '--header-surface': '#ffffff',
+                    '--muted-surface': '#f8fafc',
+                    '--input-surface': '#ffffff',
+                    '--strong-surface': '#0f172a'
+                }
+            },
+            escuro: {
+                label: 'Escuro',
+                description: 'Contraste elevado para pouca luz',
+                swatch: ['#0f172a', '#111827', '#60a5fa', '#22d3ee'],
+                prefersDark: true,
+                variables: {
+                    '--primary-color': '#60a5fa',
+                    '--secondary-color': '#22d3ee',
+                    '--success-color': '#34d399',
+                    '--warning-color': '#fbbf24',
+                    '--danger-color': '#f87171',
+                    '--primary-dark': '#1d4ed8',
+                    '--danger-dark': '#991b1b',
+                    '--dark-color': '#e5e7eb',
+                    '--light-color': '#0f172a',
+                    '--text-color': '#e2e8f0',
+                    '--muted-color': '#94a3b8',
+                    '--surface-color': '#0b1220',
+                    '--bg-color': '#0f172a',
+                    '--border-color': '#1e293b',
+                    '--shadow-color': 'rgba(0, 0, 0, 0.4)',
+                    '--focus-ring': 'rgba(96, 165, 250, 0.35)',
+                    '--sidebar-gradient-start': '#0b172a',
+                    '--sidebar-gradient-end': '#0f172a',
+                    '--header-surface': '#0b1220',
+                    '--muted-surface': '#111827',
+                    '--input-surface': '#0f172a',
+                    '--strong-surface': '#030712'
+                }
+            },
+            pink: {
+                label: 'Pink',
+                description: 'Paleta vibrante com destaque rosé',
+                swatch: ['#ec4899', '#a855f7', '#fff0f6', '#3b0b2b'],
+                prefersDark: false,
+                variables: {
+                    '--primary-color': '#ec4899',
+                    '--secondary-color': '#a855f7',
+                    '--success-color': '#10b981',
+                    '--warning-color': '#f59e0b',
+                    '--danger-color': '#fb7185',
+                    '--primary-dark': '#be185d',
+                    '--danger-dark': '#be123c',
+                    '--dark-color': '#3b0a28',
+                    '--light-color': '#fff0f6',
+                    '--text-color': '#2b0b23',
+                    '--muted-color': '#7f1d4e',
+                    '--surface-color': '#fff8fb',
+                    '--bg-color': '#fff0f6',
+                    '--border-color': '#fbcfe8',
+                    '--shadow-color': 'rgba(190, 24, 93, 0.12)',
+                    '--focus-ring': 'rgba(236, 72, 153, 0.25)',
+                    '--sidebar-gradient-start': '#831843',
+                    '--sidebar-gradient-end': '#9d174d',
+                    '--header-surface': '#fff7fb',
+                    '--muted-surface': '#ffe4f0',
+                    '--input-surface': '#ffffff',
+                    '--strong-surface': '#3b0b2b'
+                }
+            },
+            modern: {
+                label: 'Modern',
+                description: 'Azul sofisticado com acentos teal',
+                swatch: ['#06b6d4', '#0ea5e9', '#f0f9ff', '#0b1220'],
+                prefersDark: false,
+                variables: {
+                    '--primary-color': '#06b6d4',
+                    '--secondary-color': '#14b8a6',
+                    '--success-color': '#22c55e',
+                    '--warning-color': '#f59e0b',
+                    '--danger-color': '#f97316',
+                    '--primary-dark': '#0ea5e9',
+                    '--danger-dark': '#c2410c',
+                    '--dark-color': '#0f172a',
+                    '--light-color': '#f8fafc',
+                    '--text-color': '#0f172a',
+                    '--muted-color': '#475569',
+                    '--surface-color': '#ffffff',
+                    '--bg-color': '#f0f9ff',
+                    '--border-color': '#e2e8f0',
+                    '--shadow-color': 'rgba(8, 47, 73, 0.12)',
+                    '--focus-ring': 'rgba(6, 182, 212, 0.25)',
+                    '--sidebar-gradient-start': '#0ea5e9',
+                    '--sidebar-gradient-end': '#0f172a',
+                    '--header-surface': '#f8fafc',
+                    '--muted-surface': '#e0f2fe',
+                    '--input-surface': '#ffffff',
+                    '--strong-surface': '#0b1220'
+                }
+            },
+            carbon: {
+                label: 'Carbon',
+                description: 'Tons grafite com detalhes ciano',
+                swatch: ['#0b0f17', '#111827', '#22d3ee', '#22c55e'],
+                prefersDark: true,
+                variables: {
+                    '--primary-color': '#22d3ee',
+                    '--secondary-color': '#22c55e',
+                    '--success-color': '#22c55e',
+                    '--warning-color': '#fbbf24',
+                    '--danger-color': '#f87171',
+                    '--primary-dark': '#164e63',
+                    '--danger-dark': '#9b1c1c',
+                    '--dark-color': '#e5e7eb',
+                    '--light-color': '#0b0f17',
+                    '--text-color': '#e5e7eb',
+                    '--muted-color': '#94a3b8',
+                    '--surface-color': '#111827',
+                    '--bg-color': '#0b0f17',
+                    '--border-color': '#1f2937',
+                    '--shadow-color': 'rgba(0, 0, 0, 0.45)',
+                    '--focus-ring': 'rgba(34, 211, 238, 0.35)',
+                    '--sidebar-gradient-start': '#0b0f17',
+                    '--sidebar-gradient-end': '#0f172a',
+                    '--header-surface': '#0f172a',
+                    '--muted-surface': '#111827',
+                    '--input-surface': '#0f172a',
+                    '--strong-surface': '#020617'
+                }
+            }
+        };
+        const themeVariableKeys = Object.values(THEMES).reduce((acumulador, tema) => {
+            Object.keys(tema.variables || {}).forEach(chave => acumulador.add(chave));
+            return acumulador;
+        }, new Set());
+        function aplicarTema(temaId, { persistir = true } = {}) {
+            const temaValido = THEMES[temaId] ? temaId : 'claro';
+            const tema = THEMES[temaValido];
+            const root = document.documentElement;
+
+            themeVariableKeys.forEach(chave => root.style.removeProperty(chave));
+            Object.entries(tema.variables || {}).forEach(([chave, valor]) => root.style.setProperty(chave, valor));
+
+            root.setAttribute('data-theme', temaValido);
+            root.style.colorScheme = tema.prefersDark ? 'dark' : 'light';
+            estado.temaAtual = temaValido;
+
+            if (persistir) {
+                const storage = obterArmazenamentoLocal();
+                if (storage) {
+                    try {
+                        storage.setItem(STORAGE_KEYS.temaPreferido, temaValido);
+                    } catch (erro) {
+                        console.warn('Não foi possível salvar o tema selecionado:', erro);
+                    }
+                }
+            }
+
+            atualizarTemaSelecionadoUI();
+        }
+        function restaurarTemaPreferido() {
+            const storage = obterArmazenamentoLocal();
+            if (!storage) {
+                aplicarTema(estado.temaAtual, { persistir: false });
+                return;
+            }
+            try {
+                const salvo = storage.getItem(STORAGE_KEYS.temaPreferido);
+                if (salvo && THEMES[salvo]) {
+                    aplicarTema(salvo, { persistir: false });
+                } else {
+                    aplicarTema(estado.temaAtual, { persistir: false });
+                }
+            } catch (erro) {
+                console.warn('Falha ao restaurar tema preferido:', erro);
+                aplicarTema(estado.temaAtual, { persistir: false });
+            }
+        }
+        function atualizarTemaSelecionadoUI() {
+            if (!elementos.themeSwitcher || !elementos.themeSwitcherOptions) {
+                return;
+            }
+            const tema = THEMES[estado.temaAtual] || THEMES.claro;
+            if (elementos.themeSwitcherCurrent) {
+                elementos.themeSwitcherCurrent.textContent = tema.label;
+            }
+            Array.from(elementos.themeSwitcherOptions.children).forEach(botao => {
+                const selecionado = botao.dataset.theme === estado.temaAtual;
+                botao.setAttribute('aria-selected', selecionado ? 'true' : 'false');
+                botao.classList.toggle('is-active', selecionado);
+            });
+        }
+        function fecharOpcoesTema() {
+            if (elementos.themeSwitcher) {
+                elementos.themeSwitcher.classList.remove('open');
+            }
+            if (elementos.themeSwitcherTrigger) {
+                elementos.themeSwitcherTrigger.setAttribute('aria-expanded', 'false');
+            }
+        }
+        function alternarOpcoesTema() {
+            if (!elementos.themeSwitcher) return;
+            const aberto = elementos.themeSwitcher.classList.toggle('open');
+            if (elementos.themeSwitcherTrigger) {
+                elementos.themeSwitcherTrigger.setAttribute('aria-expanded', aberto ? 'true' : 'false');
+            }
+        }
+        function criarOpcaoTema(temaId, tema) {
+            const botao = document.createElement('button');
+            botao.type = 'button';
+            botao.className = 'theme-option';
+            botao.dataset.theme = temaId;
+            botao.setAttribute('role', 'option');
+            botao.setAttribute('aria-selected', 'false');
+
+            const swatch = document.createElement('div');
+            swatch.className = 'theme-swatch';
+            (tema.swatch || []).slice(0, 4).forEach(cor => {
+                const bloco = document.createElement('span');
+                bloco.style.background = cor;
+                swatch.appendChild(bloco);
+            });
+
+            const info = document.createElement('div');
+            info.className = 'theme-info';
+            const titulo = document.createElement('div');
+            titulo.className = 'theme-name';
+            titulo.textContent = tema.label;
+            const descricao = document.createElement('div');
+            descricao.className = 'theme-desc';
+            descricao.textContent = tema.description;
+            info.append(titulo, descricao);
+
+            botao.append(swatch, info);
+            botao.addEventListener('click', () => {
+                aplicarTema(temaId);
+                fecharOpcoesTema();
+            });
+            botao.addEventListener('keydown', (evento) => {
+                if (evento.key === 'Enter' || evento.key === ' ') {
+                    evento.preventDefault();
+                    aplicarTema(temaId);
+                    fecharOpcoesTema();
+                }
+            });
+
+            return botao;
+        }
+        function preencherOpcoesTema() {
+            if (!elementos.themeSwitcherOptions) return;
+            elementos.themeSwitcherOptions.innerHTML = '';
+            Object.entries(THEMES).forEach(([temaId, tema]) => {
+                const botao = criarOpcaoTema(temaId, tema);
+                elementos.themeSwitcherOptions.appendChild(botao);
+            });
+            atualizarTemaSelecionadoUI();
+        }
+        function registrarEventosTema() {
+            if (!elementos.themeSwitcherTrigger) return;
+            elementos.themeSwitcherTrigger.addEventListener('click', () => {
+                alternarOpcoesTema();
+            });
+            document.addEventListener('click', (evento) => {
+                if (!elementos.themeSwitcher) return;
+                if (!elementos.themeSwitcher.contains(evento.target)) {
+                    fecharOpcoesTema();
+                }
+            });
+            document.addEventListener('keydown', (evento) => {
+                if (evento.key === 'Escape') {
+                    fecharOpcoesTema();
+                }
+            });
+        }
+        function inicializarTemas() {
+            preencherOpcoesTema();
+            restaurarTemaPreferido();
+            registrarEventosTema();
+        }
         let armazenamentoLocalDisponivel;
         let rascunhosOcupacaoRestaurados = false;
         function removerRascunhoChave(chave) {
@@ -551,6 +853,10 @@
             headerUserAvatar: document.getElementById('header-user-avatar'),
             headerUserName: document.getElementById('header-user-name'),
             headerUserRole: document.getElementById('header-user-role'),
+            themeSwitcher: document.getElementById('theme-switcher'),
+            themeSwitcherTrigger: document.getElementById('theme-switcher-trigger'),
+            themeSwitcherOptions: document.getElementById('theme-switcher-options'),
+            themeSwitcherCurrent: document.getElementById('theme-switcher-current'),
             avatarModal: document.getElementById('avatar-modal'),
             avatarModalBackdrop: document.getElementById('avatar-modal-backdrop'),
             avatarModalClose: document.getElementById('avatar-modal-close'),
@@ -1410,6 +1716,7 @@
             atualizarOpcoesSetorTermo();
             atualizarResponsavelMovimentacaoInfo();
             inicializarLogin();
+            inicializarTemas();
         });
         function aguardar(ms) {
             return new Promise(resolve => setTimeout(resolve, ms));
