--- a/style.html
+++ b/style.html
@@ -9,6 +9,14 @@
             --primary-dark: #1D4ED8;
             --danger-dark: #991B1B;
 
+            /* Layout surfaces */
+            --sidebar-gradient-start: #0e2f63;
+            --sidebar-gradient-end: color-mix(in srgb, #010814 78%, #133f82);
+            --header-surface: #ffffff;
+            --muted-surface: #f8fafc;
+            --input-surface: #ffffff;
+            --strong-surface: #0f172a;
+
             /* Neutrals */
             --dark-color: #1F2937;
             --light-color: #F3F4F6;
@@ -36,6 +44,109 @@
             --extended-badge-text: color-mix(in srgb, var(--primary-color) 80%, black 20%);
             --extended-row-bg: color-mix(in srgb, var(--primary-color) 10%, white 90%);
             --extended-border-color: color-mix(in srgb, var(--primary-color) 45%, transparent);
+        }
+        [data-theme="claro"] {
+            color-scheme: light;
+        }
+        [data-theme="escuro"] {
+            --primary-color: #60a5fa;
+            --secondary-color: #22d3ee;
+            --success-color: #34d399;
+            --warning-color: #fbbf24;
+            --danger-color: #f87171;
+            --primary-dark: #1d4ed8;
+            --danger-dark: #991b1b;
+            --dark-color: #e5e7eb;
+            --light-color: #0f172a;
+            --text-color: #e2e8f0;
+            --muted-color: #94a3b8;
+            --surface-color: #0b1220;
+            --bg-color: #0f172a;
+            --border-color: #1e293b;
+            --shadow-color: rgba(0, 0, 0, 0.4);
+            --focus-ring: rgba(96, 165, 250, 0.35);
+            --sidebar-gradient-start: #0b172a;
+            --sidebar-gradient-end: #0f172a;
+            --header-surface: #0b1220;
+            --muted-surface: #111827;
+            --input-surface: #0f172a;
+            --strong-surface: #030712;
+            color-scheme: dark;
+        }
+        [data-theme="pink"] {
+            --primary-color: #ec4899;
+            --secondary-color: #a855f7;
+            --success-color: #10b981;
+            --warning-color: #f59e0b;
+            --danger-color: #fb7185;
+            --primary-dark: #be185d;
+            --danger-dark: #be123c;
+            --dark-color: #3b0a28;
+            --light-color: #fff0f6;
+            --text-color: #2b0b23;
+            --muted-color: #7f1d4e;
+            --surface-color: #fff8fb;
+            --bg-color: #fff0f6;
+            --border-color: #fbcfe8;
+            --shadow-color: rgba(190, 24, 93, 0.12);
+            --focus-ring: rgba(236, 72, 153, 0.25);
+            --sidebar-gradient-start: #831843;
+            --sidebar-gradient-end: #9d174d;
+            --header-surface: #fff7fb;
+            --muted-surface: #ffe4f0;
+            --input-surface: #ffffff;
+            --strong-surface: #3b0b2b;
+            color-scheme: light;
+        }
+        [data-theme="modern"] {
+            --primary-color: #06b6d4;
+            --secondary-color: #14b8a6;
+            --success-color: #22c55e;
+            --warning-color: #f59e0b;
+            --danger-color: #f97316;
+            --primary-dark: #0ea5e9;
+            --danger-dark: #c2410c;
+            --dark-color: #0f172a;
+            --light-color: #f8fafc;
+            --text-color: #0f172a;
+            --muted-color: #475569;
+            --surface-color: #ffffff;
+            --bg-color: #f0f9ff;
+            --border-color: #e2e8f0;
+            --shadow-color: rgba(8, 47, 73, 0.12);
+            --focus-ring: rgba(6, 182, 212, 0.25);
+            --sidebar-gradient-start: #0ea5e9;
+            --sidebar-gradient-end: #0f172a;
+            --header-surface: #f8fafc;
+            --muted-surface: #e0f2fe;
+            --input-surface: #ffffff;
+            --strong-surface: #0b1220;
+            color-scheme: light;
+        }
+        [data-theme="carbon"] {
+            --primary-color: #22d3ee;
+            --secondary-color: #22c55e;
+            --success-color: #22c55e;
+            --warning-color: #fbbf24;
+            --danger-color: #f87171;
+            --primary-dark: #164e63;
+            --danger-dark: #9b1c1c;
+            --dark-color: #e5e7eb;
+            --light-color: #0b0f17;
+            --text-color: #e5e7eb;
+            --muted-color: #94a3b8;
+            --surface-color: #111827;
+            --bg-color: #0b0f17;
+            --border-color: #1f2937;
+            --shadow-color: rgba(0, 0, 0, 0.45);
+            --focus-ring: rgba(34, 211, 238, 0.35);
+            --sidebar-gradient-start: #0b0f17;
+            --sidebar-gradient-end: #0f172a;
+            --header-surface: #0f172a;
+            --muted-surface: #111827;
+            --input-surface: #0f172a;
+            --strong-surface: #020617;
+            color-scheme: dark;
         }
         .sr-only {
             position: absolute;
@@ -90,7 +201,7 @@
         /* Sidebar */
         .sidebar {
             width: var(--sidebar-width);
-            background: linear-gradient(180deg, #0e2f63, color-mix(in srgb, #010814 78%, #133f82));
+            background: linear-gradient(180deg, var(--sidebar-gradient-start), var(--sidebar-gradient-end));
             color: white;
             height: 100vh;
             position: fixed;
@@ -255,7 +366,7 @@
             height: 42px;
             border-radius: 10px;
             border: 1px solid color-mix(in srgb, var(--dark-color) 12%, transparent);
-            background: white;
+            background: var(--surface-color);
             color: var(--dark-color);
             cursor: pointer;
             box-shadow: 0 6px 16px rgba(15, 23, 42, 0.08);
@@ -280,6 +391,118 @@
             justify-content: flex-end;
             flex: 1 1 auto;
             min-width: 0;
+        }
+        .theme-switcher {
+            position: relative;
+        }
+        .theme-switcher-trigger {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            border: 1px solid var(--border-color);
+            background: var(--surface-color);
+            color: var(--text-color);
+            padding: 10px 12px;
+            border-radius: 12px;
+            cursor: pointer;
+            box-shadow: 0 8px 18px var(--shadow-color);
+            min-width: 164px;
+            transition: all 0.2s ease;
+        }
+        .theme-switcher-trigger:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 12px 24px var(--shadow-color);
+        }
+        .theme-switcher-trigger:focus-visible {
+            outline: 2px solid var(--focus-ring);
+            outline-offset: 2px;
+        }
+        .theme-switcher-trigger i:first-child {
+            color: var(--primary-color);
+            font-size: 1.1rem;
+        }
+        .theme-switcher-label {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            line-height: 1.2;
+            flex: 1;
+        }
+        .theme-switcher-title {
+            font-size: 0.75rem;
+            color: var(--muted-color);
+        }
+        .theme-switcher-current {
+            font-weight: 600;
+            color: var(--text-color);
+        }
+        .theme-switcher-options {
+            position: absolute;
+            top: calc(100% + 8px);
+            right: 0;
+            min-width: 220px;
+            background: var(--surface-color);
+            border: 1px solid var(--border-color);
+            border-radius: 14px;
+            box-shadow: 0 16px 36px var(--shadow-color);
+            padding: 8px;
+            display: none;
+            z-index: 5;
+        }
+        .theme-switcher.open .theme-switcher-options {
+            display: block;
+        }
+        .theme-option {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            width: 100%;
+            border: none;
+            background: none;
+            padding: 10px 12px;
+            border-radius: 10px;
+            cursor: pointer;
+            color: var(--text-color);
+            transition: background 0.2s ease, transform 0.2s ease;
+        }
+        .theme-option:hover,
+        .theme-option:focus-visible {
+            background: color-mix(in srgb, var(--primary-color) 12%, transparent);
+            outline: none;
+            transform: translateY(-1px);
+        }
+        .theme-option[aria-selected="true"] {
+            background: color-mix(in srgb, var(--primary-color) 18%, transparent);
+        }
+        .theme-option .theme-swatch {
+            width: 32px;
+            height: 32px;
+            border-radius: 10px;
+            border: 1px solid var(--border-color);
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            overflow: hidden;
+        }
+        .theme-option .theme-swatch span {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+        .theme-option .theme-info {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            text-align: left;
+            flex: 1;
+        }
+        .theme-option .theme-name {
+            font-weight: 600;
+            font-size: 0.95rem;
+        }
+        .theme-option .theme-desc {
+            font-size: 0.78rem;
+            color: var(--muted-color);
         }
         .header-selectors {
             display: flex;
@@ -1890,9 +2113,9 @@
             background: rgba(15, 23, 42, 0.55);
         }
         .modal-print .modal-content {
-            background: #f8fafc;
-            border: 1px solid #e2e8f0;
-            box-shadow: 0 18px 46px rgba(15, 23, 42, 0.28);
+            background: var(--muted-surface);
+            border: 1px solid var(--border-color);
+            box-shadow: 0 18px 46px var(--shadow-color);
             max-width: 1280px;
             width: min(100%, 1280px);
             display: flex;
@@ -1909,7 +2132,7 @@
             gap: 14px;
             align-items: center;
             width: 100%;
-            background: linear-gradient(180deg, #ffffff 0%, #f8fafc 70%);
+            background: linear-gradient(180deg, var(--surface-color) 0%, var(--muted-surface) 70%);
             border-radius: 14px;
             padding: 6px 8px 12px;
             max-height: 100%;
@@ -1928,13 +2151,13 @@
             backdrop-filter: blur(2px);
         }
         .pdf-viewer-body {
-            background: #f8fafc;
+            background: var(--muted-surface);
         }
         .pdf-frame-wrapper {
-            background: #fff;
-            border: 1px solid #d0d7e2;
+            background: var(--surface-color);
+            border: 1px solid var(--border-color);
             border-radius: 10px;
-            box-shadow: 0 12px 32px rgba(15, 23, 42, 0.12);
+            box-shadow: 0 12px 32px var(--shadow-color);
             height: 70vh;
             overflow: hidden;
         }
@@ -1942,16 +2165,16 @@
             width: 100%;
             height: 100%;
             border: none;
-            background: #1f2937;
+            background: var(--strong-surface);
         }
         .pdf-empty-state {
             margin-top: 16px;
             padding: 24px;
-            border: 1px dashed #cbd5e1;
+            border: 1px dashed color-mix(in srgb, var(--border-color) 80%, transparent);
             border-radius: 10px;
-            color: #4b5563;
+            color: color-mix(in srgb, var(--text-color) 74%, var(--muted-color) 26%);
             text-align: center;
-            background: #fff;
+            background: var(--surface-color);
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -1959,7 +2182,7 @@
         }
         .pdf-empty-state i {
             font-size: 32px;
-            color: #64748b;
+            color: color-mix(in srgb, var(--primary-color) 34%, var(--muted-color) 66%);
         }
         .pdf-empty-state.hidden {
             display: none;
