Simplify themes and refine palettes

--- a/style.html
+++ b/style.html
@@ -49,104 +49,54 @@
             color-scheme: light;
         }
         [data-theme="escuro"] {
-            --primary-color: #60a5fa;
-            --secondary-color: #22d3ee;
+            --primary-color: #8bb3ff;
+            --secondary-color: #38bdf8;
             --success-color: #34d399;
             --warning-color: #fbbf24;
-            --danger-color: #f87171;
+            --danger-color: #fb7185;
             --primary-dark: #1d4ed8;
-            --danger-dark: #991b1b;
+            --danger-dark: #b91c1c;
             --dark-color: #e5e7eb;
-            --light-color: #0f172a;
+            --light-color: #0b1220;
             --text-color: #e2e8f0;
-            --muted-color: #94a3b8;
-            --surface-color: #0b1220;
-            --bg-color: #0f172a;
-            --border-color: #1e293b;
-            --shadow-color: rgba(0, 0, 0, 0.4);
-            --focus-ring: rgba(96, 165, 250, 0.35);
-            --sidebar-gradient-start: #0b172a;
+            --muted-color: #9ca3af;
+            --surface-color: #111827;
+            --bg-color: #0b1220;
+            --border-color: #1f2937;
+            --shadow-color: rgba(0, 0, 0, 0.45);
+            --focus-ring: rgba(139, 179, 255, 0.35);
+            --sidebar-gradient-start: #0b1220;
             --sidebar-gradient-end: #0f172a;
-            --header-surface: #0b1220;
+            --header-surface: #0d172a;
             --muted-surface: #111827;
             --input-surface: #0f172a;
-            --strong-surface: #030712;
+            --strong-surface: #0a152a;
             color-scheme: dark;
         }
         [data-theme="pink"] {
-            --primary-color: #ec4899;
-            --secondary-color: #a855f7;
+            --primary-color: #f472b6;
+            --secondary-color: #c084fc;
             --success-color: #10b981;
             --warning-color: #f59e0b;
-            --danger-color: #fb7185;
-            --primary-dark: #be185d;
-            --danger-dark: #be123c;
-            --dark-color: #3b0a28;
-            --light-color: #fff0f6;
-            --text-color: #2b0b23;
-            --muted-color: #7f1d4e;
-            --surface-color: #fff8fb;
-            --bg-color: #fff0f6;
-            --border-color: #fbcfe8;
-            --shadow-color: rgba(190, 24, 93, 0.12);
-            --focus-ring: rgba(236, 72, 153, 0.25);
-            --sidebar-gradient-start: #831843;
-            --sidebar-gradient-end: #9d174d;
+            --danger-color: #fda4af;
+            --primary-dark: #db2777;
+            --danger-dark: #f43f5e;
+            --dark-color: #3d0f23;
+            --light-color: #fff7fb;
+            --text-color: #321327;
+            --muted-color: #8f3b63;
+            --surface-color: #fff9fd;
+            --bg-color: #fff7fb;
+            --border-color: #f8cde7;
+            --shadow-color: rgba(244, 114, 182, 0.12);
+            --focus-ring: rgba(244, 114, 182, 0.25);
+            --sidebar-gradient-start: #f472b6;
+            --sidebar-gradient-end: #f9a8d4;
             --header-surface: #fff7fb;
-            --muted-surface: #ffe4f0;
+            --muted-surface: #ffe9f3;
             --input-surface: #ffffff;
-            --strong-surface: #3b0b2b;
+            --strong-surface: #4b1d35;
             color-scheme: light;
-        }
-        [data-theme="modern"] {
-            --primary-color: #06b6d4;
-            --secondary-color: #14b8a6;
-            --success-color: #22c55e;
-            --warning-color: #f59e0b;
-            --danger-color: #f97316;
-            --primary-dark: #0ea5e9;
-            --danger-dark: #c2410c;
-            --dark-color: #0f172a;
-            --light-color: #f8fafc;
-            --text-color: #0f172a;
-            --muted-color: #475569;
-            --surface-color: #ffffff;
-            --bg-color: #f0f9ff;
-            --border-color: #e2e8f0;
-            --shadow-color: rgba(8, 47, 73, 0.12);
-            --focus-ring: rgba(6, 182, 212, 0.25);
-            --sidebar-gradient-start: #0ea5e9;
-            --sidebar-gradient-end: #0f172a;
-            --header-surface: #f8fafc;
-            --muted-surface: #e0f2fe;
-            --input-surface: #ffffff;
-            --strong-surface: #0b1220;
-            color-scheme: light;
-        }
-        [data-theme="carbon"] {
-            --primary-color: #22d3ee;
-            --secondary-color: #22c55e;
-            --success-color: #22c55e;
-            --warning-color: #fbbf24;
-            --danger-color: #f87171;
-            --primary-dark: #164e63;
-            --danger-dark: #9b1c1c;
-            --dark-color: #e5e7eb;
-            --light-color: #0b0f17;
-            --text-color: #e5e7eb;
-            --muted-color: #94a3b8;
-            --surface-color: #111827;
-            --bg-color: #0b0f17;
-            --border-color: #1f2937;
-            --shadow-color: rgba(0, 0, 0, 0.45);
-            --focus-ring: rgba(34, 211, 238, 0.35);
-            --sidebar-gradient-start: #0b0f17;
-            --sidebar-gradient-end: #0f172a;
-            --header-surface: #0f172a;
-            --muted-surface: #111827;
-            --input-surface: #0f172a;
-            --strong-surface: #020617;
-            color-scheme: dark;
         }
         .sr-only {
             position: absolute;
